--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -6,11 +6,11 @@
     <meta name="robots" content="noindex" />
     <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
     <title>Content Manager</title>
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
-    <script>
+    <script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js"></script>
+    <!-- <script>
         if (window.netlifyIdentity) {
             window.netlifyIdentity.on("init", (user) => {
             if (!user) {
@@ -20,6 +20,6 @@
             }
             });
         }
-    </script>
+    </script> -->
   </body>
 </html>
